# hzzs

./: .env.hzzs.local  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  gradle.local.properties.example  gradle.properties  gradlew  gradlew.bat  keystore.properties.example  settings.gradle.kts  skills-lock.json
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: algorithm-release.yml  build.yml  release.yml
.serena/: project.yml
algorithm-packs/: README.md
algorithm-packs/official-bamboo-baseline/: CHANGELOG.txt  manifest.json  rules.json
algorithm-packs/official-public-keys/: README.md  hzzs-algorithm-official-1.der.b64  hzzs-algorithm-official-1.pem
algorithm-packs/sea-salt-living-room-v1/: rules.json  (+1 more)
app/: CLAUDE.md  README.md  build.gradle.kts  proguard-rules.pro
app/src/main/cpp/: CLAUDE.md  CMakeLists.txt  README.md  algorithm_runtime.cpp  algorithm_runtime.h  bamboo_bookstore.cpp  color_components.h  jni_bridge.cpp  multicolor_detector.cpp  multicolor_detector.h  scene_geometry.h  sea_salt_living_room.cpp  sweet_factory.cpp  vision_engine.cpp  vision_engine.h  vision_types.h
app/src/main/cpp/include/hzzs/analysis/: ActionPromptEngine.h  AnalysisTypes.h  Geometry.h  HazardEtaEstimator.h  JumpStageEstimator.h  NativeAnalysisEngine.h  RunnerStateMachine.h  SceneStateMachine.h
app/src/main/cpp/include/hzzs/vision/: GreenBottleLineDetector.h
app/src/main/cpp/legacy_main/vision2/: HzzsVisionCore.cpp  HzzsVisionCore.h  HzzsVisionJni.cpp
app/src/main/cpp/legacy_main/vision_bamboo/: BambooVisionCore.cpp  BambooVisionCore.h  BambooVisionEngine.cpp  BambooVisionEngine.h  BambooVisionJni.cpp
app/src/main/cpp/src/analysis/: ActionPromptEngine.cpp  HazardEtaEstimator.cpp  JumpStageEstimator.cpp  NativeAnalysisEngine.cpp  RunnerStateMachine.cpp  SceneStateMachine.cpp
app/src/main/cpp/src/jni/: NativeAnalysisBridge.cpp
app/src/main/cpp/src/vision/: GreenBottleLineDetector.cpp  NativeVisionBridge.cpp
app/src/main/cpp/vision/algorithm/: GreenBottleDetector.cpp  GreenBottleDetector.h  PitDetector.cpp  PitDetector.h  VisionTypes.h
app/src/main/cpp/vision/bridge/: VisionBridge.cpp
app/src/main/cpp/vision/logger/: LogManager.cpp  LogManager.h
app/src/main/cpp/vision/renderer/: DebugRenderer.cpp  DebugRenderer.h
app/src/main/cpp/vision_bamboo/: BambooVisionCore.cpp  BambooVisionCore.h
core/: build.gradle.kts
docs/: AGENT_EXPERIENCE.md  ALGORITHM_SYSTEM_V1.md  PROGRESS.md  README.md  SECURITY.md  analysis-algorithm.md  architecture.md  auto-operation-design.md  capture-backends-roadmap.md  privacy-and-boundaries.md  testing.md  vision-green-bottle.md  vision-material-analysis.md  vision-overview.md  vision-settings.md
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
(+364 files in other folders)
